# cheeseshop

./: .gitignore  .make-rev-check  .travis.yml  Makefile  README.rst  db_create.py  example_config.yaml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
cheeseshop/: config.py  db.py  dbapi.py  main.py  objectstoreapi.py  swift.py  systemconfig.py  util.py
cheeseshop/cmd/: :q!  demo_scraper.py  hltv_scraper.py
cheeseshop/dbmigrations/: __init__.py  add_systemconfig.py  create_csgo_schema.py  create_game_replay_schema.py  create_sc2_csgo_game_records.py
cheeseshop/demoparser/: bitbuf.pyx  bitbuffer.py  bitbuffer.pyx  consts.py  demofile.py  example.py  parser.py  parser.pyx  props.pxd  props.pyx  structures.py  test.py  util.pxd  util.pyx
cheeseshop/demoparser/entities/: __init__.py  base.py  entity_list.py  game_rules.py  team.py  (+2 more)
cheeseshop/games/: csgo.py  gameapi.py
cheeseshop/static/: index.html
cheeseshop/templates/: base.html  csgo_deathlog.html  csgo_events_entry_kills_heatmap.html  csgo_moneylog.html  csgo_position_heatmap.html  csgo_positions_heatmap.html  get_gsi.html  get_gsi_maps.html  get_upload.html  list_replays.html  post_gsi_source.html  post_upload_fullreplay.html  post_upload_tempurl.html  upload.html
cheeseshop/tests/: asyncfixtures.py  base.py  fakes.py  test_csgo.py
cheeseshop/workers/: csgo_map_populator.py  player_names.py  supply_breakdown.py
conf/: config_template.yaml  static-nginx.conf
deploy/: webapp.yaml
deploy/images/: cheeseshop.Dockerfile  make-image.sh  static-server.Dockerfile  webapp.Dockerfile
(+5 files in other folders)
