[metadata]
name = cheeseshop
author = Gregory Haynes
author-email = greg@greghaynes.net
summary = E-Sports analytics app
description-file = README.rst
home-page = https://github.com/ibm-dev-incubator/cheeseshop
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    cheeseshop

[entry_points]
console_scripts =
    cheeseshop-webapp = cheeseshop.main:main
